# TestNDK2

app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/yong/testndk/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-Computer.cpp  native-lib_test.cpp  native_Hello.cpp
app/src/main/cpp/computer/: Computer.cpp  Computer.h
app/src/main/res/layout/: activity_main.xml
app/src/test/java/yong/testndk/: ExampleUnitTest.java
